syntax = "proto3";

package access;
option go_package = "app/access/pkg/access;access";

service Access {
    rpc UserAccess(UserAccessRequest) returns(UserAccessResponse);
}

message Service {
    string name = 1;
    repeated string methods = 2;
}

message UserAccessRequest {
    uint64 id = 1;
}

message UserAccessResponse {
    repeated Service access = 1;
}
